--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
             <span class="myName" data-aos="fade-left" data-aos-delay="1500"
               >Leonardo G.S</span
             >
+            <span data-aos="fade-left" data-aos-delay="1500">Palembang, 25 April 2000</span>
+            <span data-aos="fade-left" data-aos-delay="1500">Universitas Multi Data Palembang</span>
           </div>
           <div class="motoHeader">
             <p data-aos="fade-right" data-aos-delay="1500">
@@ -107,13 +109,13 @@
               dilanjutkan dari sore sampai malam berkuliah, serta saya juga
               mulai bekerja dari SMA.
             </p>
-            <p data-aos="fade-right" data-aos-delay="2000">
+            <p data-aos="fade-right" data-aos-delay="1500">
               Saya sangat tertarik pada bidang teknologi informasi terkhususnya
               pada Front-End Web Developer yang semakin berkembang, serta
               memiliki berbagai fitur yang baru dan menarik untuk dipelajari dan
               diterapkan.
             </p>
-            <p data-aos="fade-right" data-aos-delay="2500">
+            <p data-aos="fade-right" data-aos-delay="500">
               Serta yang terakhir yaitu menurut saya pencapaian terbesar dalam
               hidup saya adalah saya tidak pernah merepotkan orang lain dalam
               urusan pribadi saya, dimana saya telah mencari uang untuk biaya
