--- a/index.html
+++ b/index.html
@@ -94,11 +94,15 @@
             <span class="myName" data-aos="fade-left" data-aos-delay="1500"
               >Leonardo G.S</span
             >
-            <span data-aos="fade-left" data-aos-delay="1500">Palembang, 25 April 2000</span>
-            <span data-aos="fade-left" data-aos-delay="1500">Universitas Multi Data Palembang</span>
+            <span data-aos="fade-left" data-aos-delay="1500"
+              >Palembang, 25 April 2000</span
+            >
+            <span data-aos="fade-left" data-aos-delay="1500"
+              >Universitas Multi Data Palembang</span
+            >
           </div>
           <div class="motoHeader">
-            <p data-aos="fade-right" data-aos-delay="1500">
+            <p data-aos="fade-right" data-aos-delay="500">
               Nama saya Leonardo G.S bisa dipanggil Leo dan saat ini saya
               berusia 22 Tahun, serta pada tahun ini juga saya berhasil
               menyelesaikan studi saya di Universitas Multi Data Palembang
@@ -109,7 +113,7 @@
               dilanjutkan dari sore sampai malam berkuliah, serta saya juga
               mulai bekerja dari SMA.
             </p>
-            <p data-aos="fade-right" data-aos-delay="1500">
+            <p data-aos="fade-right" data-aos-delay="500">
               Saya sangat tertarik pada bidang teknologi informasi terkhususnya
               pada Front-End Web Developer yang semakin berkembang, serta
               memiliki berbagai fitur yang baru dan menarik untuk dipelajari dan
@@ -128,10 +132,12 @@
         <!-- Experience Section -->
         <section class="experience" id="experience">
           <h1 data-aos="fade-up" data-aos-delay="500">My Experience</h1>
-          <div class="expMain" data-aos="fade-up" data-aos-delay="1000">
+          <div class="expMain" data-aos="fade-up" data-aos-delay="500">
             <div class="expNav">
               <ul>
-                <li class="active" id="navItem">Sekolah Methodist 2 Palembang</li>
+                <li class="active" id="navItem">
+                  Sekolah Methodist 2 Palembang
+                </li>
                 <li id="navItem">Vittindo Palembang</li>
               </ul>
             </div>
@@ -194,7 +200,8 @@
             <h1 data-aos="fade-up">My Learning Project</h1>
           </div>
 
-          <div class="projectContent" id="projectContent"></div>
+          <div class="projectContent" id="projectContent">
+          </div>
         </section>
       </div>
     </main>
@@ -203,7 +210,8 @@
       <span>Created by Leonardo G.S - Animation With <b>AOS</b></span>
     </footer>
 
-    <div class="sosmed">
+    <div class="sosmed" data-aos="fade-up"
+    data-aos-delay="1000">
       <a
         href="https://api.whatsapp.com/send?phone=6281532618646"
         target="_blank"
